# rookie-ranker

./: .gitignore  ML_GUIDE.md  README.md  college_data.py  get_data.py  main.py  model_test.py  pyproject.toml
rookie_ranker/: college_data.py  features.py  model.py  nfl_data.py
